# ProjectBudgetinator

./: .bandit  .flake8  .gitignore  .pylintrc  APPLICATION_METRICS_IMPLEMENTATION_COMPLETE.md  BUDGET_OVERVIEW_IMPLEMENTATION_SUMMARY.md  BUDGET_OVERVIEW_STYLING_DESIGN.md  CENTRALIZED_EXCEPTION_HANDLING_STATUS.md  COMMIT_CLEANUP_SUMMARY.md  COMPLETE_OPTIMIZATION_SUMMARY.md  CodeRabbit_Review_Issues_20250724  DOCUMENTATION_COMPLETION_REPORT.md  DYNAMIC_CONFIGURATION_IMPLEMENTATION_COMPLETE.md  Database_Error_Handling_Implementation_Summary.md  Excel_Formula_Corrections_Summary.md  Excel_Formula_Fix_Implementation_Summary.md  Excel_Formula_Logic_Solution_Architecture.md  Exception_Handling_Improvements_Summary.md  GITHUB_SETUP_GUIDE.md  IMPLEMENTATION_STATUS_SUMMARY.md  Missing_Import_Statements_Fix_Summary.md  Missing_Validation_Import_Fixes_Summary.md  OPTIMIZATION_IMPLEMENTATION_COMPLETE.md  OPTIMIZATION_RECOMMENDATIONS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PM_OVERVIEW_IMPLEMENTATION_GUIDE.md  PROGRESS_INDICATORS_IMPLEMENTATION.md  ProjectBudgetinator_Development_Checklist.md  ProjectBudgetinator_guidelines.md  README.md  RESOURCE_CLEANUP_IMPLEMENTATION_COMPLETE.md  RESOURCE_CLEANUP_SUMMARY.md  STATIC_ANALYSIS_IMPLEMENTATION_COMPLETE.md  STRUCTURED_LOGGING_IMPLEMENTATION.md  TEST_COVERAGE_IMPLEMENTATION_COMPLETE.md  Tkinter_Root_Instance_Fixes_Summary.md  Type_Hint_Evaluation_Fixes_Summary.md  UPDATE_BUDGET_OVERVIEW_HANDLER_DESIGN.md  UPDATE_BUDGET_OVERVIEW_IMPLEMENTATION_GUIDE.md  UPDATE_PM_OVERVIEW_HANDLER_DESIGN.md  (+26 more)
config/: backup.config.json  deprecation_policy.json  diagnostic.config.json  testing.env  user-config-schema.json  user.config.json
docs/: CACHING_INTEGRATION.md  DYNAMIC_CONFIGURATION_GUIDE.md  SECURITY_VALIDATION_GUIDE.md  STATIC_ANALYSIS_GUIDE.md  resource_cleanup_guide.md
examples/: caching_usage.py  excel_manager_usage.py  gui_memory_management.py  performance_monitoring_demo.py  progress_indicators_demo.py  resource_cleanup_usage.py  structured_logging_demo.py
src/: __init__.py  devtools.py  logger.py  main.py  preferences.py  schema_upgrade_manager.py  validation.py  version.py
src/auth/: __init__.py  auth_manager.py  password_utils.py  profile_manager.py  session_manager.py  user_manager.py
src/config/: config_integration.py  dynamic_config.py  excel_mappings.py  partner_table_format.py  partner_table_format.py.bak  partner_table_format.py.bak2  partner_table_format.py.new  partner_table_format.py.original  partner_table_format.py.tmp  work_package_table_format.py
src/core/: __init__.py  diagnostics.py  excel_service.py  initialize.py  preferences.py  project.py
src/database/: __init__.py  db_manager.py  models.py
src/exceptions/: __init__.py  budget_exceptions.py  database_exceptions.py
src/gui/: __init__.py  batch_operations.py  dialogs.py  enhanced_preferences.py  menu.py  menu_setup.py  performance_monitor_gui.py  position_preferences.py  progress_dialog.py  theme_manager.py  window.py  window_manager.py
src/handlers/: __init__.py  add_partner_handler.py  add_workpackage_handler.py  backup_handler.py  base_handler.py  budget_overview_format.py  edit_partner_handler.py  edit_workpackage_handler.py  file_handler.py  p1_manager_handler.py  partner_handler.py  pm_overview_format.py  project_handler.py  update_budget_overview_handler.py  update_budget_overview_handler_fixed.py  update_budget_overview_handler_formula.py  update_budget_overview_handler_simple.py  update_pm_overview_handler.py  workpackage_handler.py
src/services/: README.md  __init__.py  excel_service.py  partner_service.py  service_container.py  workpackage_service.py
src/tests/: test_security_validator.py  test_validation.py
src/utils/: __init__.py  cache_manager.py  centralized_file_operations.py  config_migration.py  (+15 more)
tests/: conftest.py  test_base_handlers.py  test_cache_manager.py  test_database_error_handling.py  test_excel_integration.py  test_excel_manager.py  test_gui_memory_management.py  test_partner_handler.py  test_partner_validation.py  test_resource_cleanup.py  test_security_integration.py  test_simple.py  test_type_hint_evaluation.py  test_update_budget_overview_handler.py  test_update_pm_overview_handler.py  test_workpackage_handler.py  test_zero_vs_empty_validation.py
(+6 files in other folders)
